force-app/main/default/objects/Avaliacao_de_Desempenho__c/Avaliacao_de_Desempenho__c.object-meta.xml
<CustomObject>
    <label>Avaliação de Desempenho</label>
    <nameField>
        <displayFormat>AD {000}</displayFormat>
        <label>Nº da Avaliação de Desempenho</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avaliações de Desempenho</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>