force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/AD_3__c.field-meta.xml
<CustomField>
    <fullName>AD_3__c</fullName>
    <description>Pergunta 3 da seção Atitude de Dono</description>
    <label>AD_3</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>