force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/C10__c.field-meta.xml
<CustomField>
    <fullName>C10__c</fullName>
    <label>C10</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>