force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/C12__c.field-meta.xml
<CustomField>
    <fullName>C12__c</fullName>
    <label>C12</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>