force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/C13__c.field-meta.xml
<CustomField>
    <fullName>C13__c</fullName>
    <label>C13</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>