force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/CG10__c.field-meta.xml
<CustomField>
    <fullName>CG10__c</fullName>
    <label>CG10</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>