force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/CG11__c.field-meta.xml
<CustomField>
    <fullName>CG11__c</fullName>
    <label>CG11</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>