force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/CG12__c.field-meta.xml
<CustomField>
    <fullName>CG12__c</fullName>
    <label>CG12</label>
    <length>32072</length>
    <type>LongTextArea</type>
</CustomField>