force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/CGAD3__c.field-meta.xml
<CustomField>
    <fullName>CGAD3__c</fullName>
    <description>Pergunta 3 da seção Atitude de Dono (Colaborador ao Gestor)</description>
    <label>CGAD3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>