force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/CGHO3__c.field-meta.xml
<CustomField>
    <fullName>CGHO3__c</fullName>
    <description>Pergunta 3 da seção Honestidade (do colaborador ao gestor)</description>
    <label>CGHO3</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>