force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/CGRESPEITO3__c.field-meta.xml
<CustomField>
    <fullName>CGRESPEITO3__c</fullName>
    <description>Pergunta 3 da seção Respeito (Colaborador ao gestor)</description>
    <label>CGRESPEITO3</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>