force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/CGSO3__c.field-meta.xml
<CustomField>
    <fullName>CGSO3__c</fullName>
    <description>Pergunta 3 da seção Sangue no Olho (Colaborador ao Gestor)</description>
    <label>CGSO3</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>