force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/Colaborador_respondeu__c.field-meta.xml
<CustomField>
    <fullName>Colaborador_respondeu__c</fullName>
    <formula>Contato__r.FirstName + &quot; &quot; +  Contato__r.LastName  + &quot; &quot; + IF(C1__c != 0, &quot;respondeu&quot;, &quot;NÃO respondeu&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Colaborador respondeu</label>
    <type>Text</type>
</CustomField>