force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colaborador</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>HOSPCOM</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Avaliações de Desempenho</relationshipLabel>
    <relationshipName>Avalia_es_de_Desempenho</relationshipName>
    <type>Lookup</type>
</CustomField>