force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/Departamento_do_Colaborador__c.field-meta.xml
<CustomField>
    <fullName>Departamento_do_Colaborador__c</fullName>
    <formula>Contato__r.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departamento do Colaborador</label>
    <type>Text</type>
</CustomField>