force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/G10__c.field-meta.xml
<CustomField>
    <fullName>G10__c</fullName>
    <label>G10</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>