force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/G13__c.field-meta.xml
<CustomField>
    <fullName>G13__c</fullName>
    <label>G13</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>