force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/G14__c.field-meta.xml
<CustomField>
    <fullName>G14__c</fullName>
    <label>G14</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>