force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/G_Resultado__c.field-meta.xml
<CustomField>
    <fullName>G_Resultado__c</fullName>
    <label>G-Resultado</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>