force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/GAD3__c.field-meta.xml
<CustomField>
    <fullName>GAD3__c</fullName>
    <description>Pergunta 3 da seção Atitude de Dono (Gestor ao Colaborador)</description>
    <label>GAD3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>