force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/GCRESPEITO3__c.field-meta.xml
<CustomField>
    <fullName>GCRESPEITO3__c</fullName>
    <description>Pergunta 3 da seção Respeito (Gestor ao colaborador)</description>
    <label>GCRESPEITO3</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>