force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/Gestor__c.field-meta.xml
<CustomField>
    <fullName>Gestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Avalia_es_de_Desempenho</relationshipName>
    <type>Lookup</type>
</CustomField>