force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/Gestor_respondeu__c.field-meta.xml
<CustomField>
    <fullName>Gestor_respondeu__c</fullName>
    <formula>Gestor__r.CommunityNickname + &quot; &quot; + IF(G1__c != 0, &quot;respondeu&quot;, &quot;NÃO respondeu&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gestor respondeu</label>
    <type>Text</type>
</CustomField>