force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/HO3__c.field-meta.xml
<CustomField>
    <fullName>HO3__c</fullName>
    <description>Pergunta 3 da seção Honestidade</description>
    <label>HO3</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>