force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/M_dia_Duas_Redes__c.field-meta.xml
<CustomField>
    <fullName>M_dia_Duas_Redes__c</fullName>
    <formula>IF(
    AND(Media_Rede__c &gt; 0, M_dia_Rede_2__c &gt; 0),
    (Media_Rede__c + M_dia_Rede_2__c) / 2,  /* Ambos maiores que zero: média */
    IF(
        Media_Rede__c &gt; 0,
        Media_Rede__c,                         /* Apenas Media_Rede__c &gt; 0 */
        IF(
            M_dia_Rede_2__c &gt; 0,
            M_dia_Rede_2__c,                    /* Apenas M_dia_Rede_2__c &gt; 0 */
            0                                    /* Ambos zero */
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Média Duas Redes</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>