force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/M_dia_Rede_2__c.field-meta.xml
<CustomField>
    <fullName>M_dia_Rede_2__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Rede_de_relacionamento2__c)),
    (
        (
            RR1__c + RR2__c + RR3__c + RR4__c + RR5__c +
            RR6__c + RR7__c + RR8__c + RR9__c + RR10__c +
            RR11__c + RRRESPEITO3__c + RRHO3__c +
            RRSO3__c + RRAD3__c
        ) / 15
    ) * 1.5, 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Média Rede 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>