force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/Media_Rede__c.field-meta.xml
<CustomField>
    <fullName>Media_Rede__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Rede_de_relacionamento__c)),
    (
        (
            R1__c + R2__c + R3__c + R4__c + R5__c +
            R6__c + R7__c + R8__c + R9__c + R10__c +
            R11__c + RRESPEITO3__c + RHO3__c +
            RSO3__c + RAD3__c
        ) / 15
    ) * 1.5, 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Média Rede</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>