force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/MediaLideranca__c.field-meta.xml
<CustomField>
    <fullName>MediaLideranca__c</fullName>
    <formula>(
(((G14__c * 7) + (C14__c * 3))/10)
+
(((G15__c * 7) + (C15__c * 3))/10)
+
(((G16__c * 7) + (C16__c * 3))/10)
)/3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Media Liderança</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>