force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/NG11__c.field-meta.xml
<CustomField>
    <fullName>NG11__c</fullName>
    <label>NG11</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>