force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/NG12__c.field-meta.xml
<CustomField>
    <fullName>NG12__c</fullName>
    <label>NG12</label>
    <length>31072</length>
    <type>LongTextArea</type>
</CustomField>