force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/NG13__c.field-meta.xml
<CustomField>
    <fullName>NG13__c</fullName>
    <label>NG13</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>