force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/NG_Resultado__c.field-meta.xml
<CustomField>
    <fullName>NG_Resultado__c</fullName>
    <label>NG_Resultado</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>