force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/NGAD_3__c.field-meta.xml
<CustomField>
    <fullName>NGAD_3__c</fullName>
    <label>NGAD_3</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>