force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/NGHO3__c.field-meta.xml
<CustomField>
    <fullName>NGHO3__c</fullName>
    <label>NGHO3</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>