force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/Nome_do_colaborador__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_colaborador__c</fullName>
    <formula>Contato__r.FirstName + &apos; &apos; +  Contato__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do colaborador</label>
    <type>Text</type>
</CustomField>