force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/Nome_do_gestor__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_gestor__c</fullName>
    <formula>Gestor__r.CommunityNickname</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do gestor</label>
    <type>Text</type>
</CustomField>