force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/Nota_Competencia__c.field-meta.xml
<CustomField>
    <fullName>Nota_Competencia__c</fullName>
    <formula>IF(Nota_Comp_Gestor__c != 0, Nota_Comp_Gestor__c,
(MediaColaborador__c + MediaGestor__c +  M_dia_Duas_Redes__c)/10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nota Competência</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>