force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/Nota_Meta_Gestor__c.field-meta.xml
<CustomField>
    <fullName>Nota_Meta_Gestor__c</fullName>
    <label>Nota Meta Gestor</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>