force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/Nota_Metas__c.field-meta.xml
<CustomField>
    <fullName>Nota_Metas__c</fullName>
    <formula>IF(Nota_Meta_Gestor__c != null, Nota_Meta_Gestor__c ,

IF(Gestor__c != null,((C_Resultado__c * 3) + (G_Resultado__c * 7)) / 10, C_Resultado__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nota Metas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>