force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/Nota_Prova_Pratica__c.field-meta.xml
<CustomField>
    <fullName>Nota_Prova_Pratica__c</fullName>
    <label>Nota Prova Pratica</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>