force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/PDI3__c.field-meta.xml
<CustomField>
    <fullName>PDI3__c</fullName>
    <label>PDI3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>