force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/PDI4__c.field-meta.xml
<CustomField>
    <fullName>PDI4__c</fullName>
    <label>PDI4</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>