force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/Q9AC__c.field-meta.xml
<CustomField>
    <fullName>Q9AC__c</fullName>
    <label>Q9AC</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>