force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/R10__c.field-meta.xml
<CustomField>
    <fullName>R10__c</fullName>
    <label>R10</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>