force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/R11__c.field-meta.xml
<CustomField>
    <fullName>R11__c</fullName>
    <label>R11</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>