force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/R12__c.field-meta.xml
<CustomField>
    <fullName>R12__c</fullName>
    <label>R12</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>