force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/RAD3__c.field-meta.xml
<CustomField>
    <fullName>RAD3__c</fullName>
    <description>Pergunta 3 da seção Atitude de Dono (Rede)</description>
    <label>RAD3</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>