force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/Referencia__c.field-meta.xml
<CustomField>
    <fullName>Referencia__c</fullName>
    <formula>IF(DATEVALUE(CreatedDate) &lt;  DATE(2022,05,31), 2021,
IF(DATEVALUE(CreatedDate) &gt;= DATE(2022,06,01) &amp;&amp;  DATEVALUE(CreatedDate) &lt;= DATE(2023,01,31), 2022,
IF(DATEVALUE(CreatedDate) &gt;= DATE(2023,11,01) &amp;&amp; DATEVALUE(CreatedDate) &lt; DATE(2024,02,29), 2023, 
IF(DATEVALUE(CreatedDate) &gt;= DATE(2024,06,01) &amp;&amp; DATEVALUE(CreatedDate) &lt; DATE(2025,02,28), 2024, 
IF(DATEVALUE(CreatedDate) &gt;= DATE(2025,07,01) &amp;&amp; DATEVALUE(CreatedDate) &lt; DATE(2025,07,31), 2025, 
null)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referência</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>