force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/Referencia_txt__c.field-meta.xml
<CustomField>
    <fullName>Referencia_txt__c</fullName>
    <formula>TEXT( Referencia__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referencia txt</label>
    <type>Text</type>
</CustomField>