force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/Respondido__c.field-meta.xml
<CustomField>
    <fullName>Respondido__c</fullName>
    <formula>AND (
C1__c != 0, C2__c != 0, C3__c != 0, C4__c != 0, C5__c != 0, C6__c != 0, C7__c != 0, C8__c != 0, C9__c != 0, C10__c != 0, C11__c != 0, G1__c != 0, G2__c != 0, G3__c != 0, G4__c != 0, G5__c != 0, G6__c != 0, G7__c != 0, G8__c != 0, G9__c != 0, G10__c != 0, G11__c != 0, G_Resultado__c != 0, C_Resultado__c != 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Respondido</label>
    <type>Checkbox</type>
</CustomField>