force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/RR10__c.field-meta.xml
<CustomField>
    <fullName>RR10__c</fullName>
    <label>RR10</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>