force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/RR11__c.field-meta.xml
<CustomField>
    <fullName>RR11__c</fullName>
    <label>RR11</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>