force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/RR14__c.field-meta.xml
<CustomField>
    <fullName>RR14__c</fullName>
    <label>RR14</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>