force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/RRAD3__c.field-meta.xml
<CustomField>
    <fullName>RRAD3__c</fullName>
    <label>RRAD3</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>