force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/RRESPEITO3__c.field-meta.xml
<CustomField>
    <fullName>RRESPEITO3__c</fullName>
    <description>Pergunta 3 da seção Respeito (Rede)</description>
    <label>RRESPEITO3</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>