force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/RRRESPEITO3__c.field-meta.xml
<CustomField>
    <fullName>RRRESPEITO3__c</fullName>
    <description>Pergunta 3 da seção Respeito (Rede 2)</description>
    <label>RRRESPEITO3</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>