force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/RRSO3__c.field-meta.xml
<CustomField>
    <fullName>RRSO3__c</fullName>
    <description>Pergunta 3 da seção Sangue no Olho (Rede 2)</description>
    <label>RRSO3</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>