force-app/main/default/objects/Avaliacao_de_Desempenho__c/fields/Sucessao__c.field-meta.xml
<CustomField>
    <fullName>Sucessao__c</fullName>
    <label>Sucessao</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>