force-app/main/default/objects/Avaliacao_de_Desempenho__c/listViews/Avalia_es_Daniel.listView-meta.xml
<ListView>
    <fullName>Avalia_es_Daniel</fullName>
    <booleanFilter>1 AND (2 OR 3 OR 4 OR 5 OR 6 OR 7)</booleanFilter>
    <columns>NAME</columns>
    <columns>Contato__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2025 12:00 AM</value>
    </filters>
    <filters>
        <field>Contato__c</field>
        <operation>contains</operation>
        <value>Daniel Alencar</value>
    </filters>
    <filters>
        <field>Rede_de_relacionamento__c</field>
        <operation>contains</operation>
        <value>Daniel Alencar</value>
    </filters>
    <filters>
        <field>Rede_de_relacionamento2__c</field>
        <operation>contains</operation>
        <value>Daniel Alencar</value>
    </filters>
    <filters>
        <field>Gestor__c</field>
        <operation>contains</operation>
        <value>Daniel Alencar</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>AD 794</value>
    </filters>
    <filters>
        <field>Novo_Gestor__c</field>
        <operation>contains</operation>
        <value>Daniel Alencar</value>
    </filters>
    <label>Avaliações (Daniel)</label>
</ListView>