force-app/main/default/objects/Avaliacao_de_Desempenho__c/listViews/Avalia_es_Desenvolvimento.listView-meta.xml
<ListView>
    <fullName>Avalia_es_Desenvolvimento</fullName>
    <columns>NAME</columns>
    <columns>Contato__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Lideranca__c</columns>
    <columns>Liberado__c</columns>
    <columns>Gestor__c</columns>
    <columns>Rede_de_relacionamento__c</columns>
    <columns>Rede_de_relacionamento2__c</columns>
    <columns>Novo_Gestor__c</columns>
    <columns>Respondido__c</columns>
    <columns>Processar_compartilhamento__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2025 12:00 AM</value>
    </filters>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>contains</operation>
        <value>Dese</value>
    </filters>
    <label>Avaliações (Desenvolvimento)</label>
</ListView>