force-app/main/default/objects/Avaliacao_de_Desempenho__c/listViews/Avalia_es_Gabriel.listView-meta.xml
<ListView>
    <fullName>Avalia_es_Gabriel</fullName>
    <booleanFilter>1 AND (2 OR 3 OR 4 OR 5 OR 6)</booleanFilter>
    <columns>NAME</columns>
    <columns>Contato__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2025 12:00 AM</value>
    </filters>
    <filters>
        <field>Nome_do_gestor__c</field>
        <operation>contains</operation>
        <value>Gabriel Alencar</value>
    </filters>
    <filters>
        <field>Rede_de_relacionamento__c</field>
        <operation>contains</operation>
        <value>Gabriel Alencar Coelho</value>
    </filters>
    <filters>
        <field>Rede_de_relacionamento2__c</field>
        <operation>contains</operation>
        <value>Gabriel Alencar</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>AD 786</value>
    </filters>
    <filters>
        <field>Gestor_adicional_respondeu__c</field>
        <operation>contains</operation>
        <value>Gabriel Alencar</value>
    </filters>
    <label>Avaliações (Gabriel)</label>
</ListView>