force-app/main/default/objects/Avaliacao_de_Desempenho__c/listViews/Avalia_es_Nayara.listView-meta.xml
<ListView>
    <fullName>Avalia_es_Nayara</fullName>
    <columns>NAME</columns>
    <columns>Contato__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Lideranca__c</columns>
    <columns>Liberado__c</columns>
    <columns>Gestor__c</columns>
    <columns>Rede_de_relacionamento__c</columns>
    <columns>Rede_de_relacionamento2__c</columns>
    <columns>Novo_Gestor__c</columns>
    <columns>Respondido__c</columns>
    <columns>Processar_compartilhamento__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>2/1/2025 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>11/1/2024 12:00 AM</value>
    </filters>
    <label>Avaliações (Nayara)</label>
</ListView>