force-app/main/default/objects/Avaliacao_de_Desempenho__c/listViews/Avaliacoes_Willyan.listView-meta.xml
<ListView>
    <fullName>Avaliacoes_Willyan</fullName>
    <booleanFilter>2 AND (3 OR 4 OR 1)</booleanFilter>
    <columns>NAME</columns>
    <columns>Nome_do_colaborador__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Gestor__c</field>
        <operation>contains</operation>
        <value>willyan</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>7/1/2025 12:00 AM</value>
    </filters>
    <filters>
        <field>Rede_de_relacionamento__c</field>
        <operation>contains</operation>
        <value>willyan</value>
    </filters>
    <filters>
        <field>Nome_do_colaborador__c</field>
        <operation>contains</operation>
        <value>willyan</value>
    </filters>
    <label>Avaliações (Willyan)</label>
</ListView>