force-app/main/default/objects/Avaliacao_de_Desempenho__c/listViews/C_pia_de_Avalia_es_Willyan_2323.listView-meta.xml
<ListView>
    <fullName>C_pia_de_Avalia_es_Willyan_2323</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4 OR 5)</booleanFilter>
    <columns>NAME</columns>
    <columns>Nome_do_colaborador__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Gestor__c</field>
        <operation>contains</operation>
        <value>willyan</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>7/1/2025 12:00 AM</value>
    </filters>
    <filters>
        <field>Nome_do_colaborador__c</field>
        <operation>contains</operation>
        <value>victor</value>
    </filters>
    <filters>
        <field>Rede_de_relacionamento__c</field>
        <operation>contains</operation>
        <value>Desenvolvimento</value>
    </filters>
    <filters>
        <field>Rede_de_relacionamento2__c</field>
        <operation>contains</operation>
        <value>Desenvolvimento</value>
    </filters>
    <label>Cópia de Avaliações (Desenvolvimento)</label>
</ListView>